--- a/sass/login.scss
+++ b/sass/login.scss
@@ -113,6 +113,7 @@ body{
             font-size: 12px;
             margin-right: 14px;
             color: #6c6c6c;
+            cursor: pointer;
         }
     }
 }
@@ -126,9 +127,59 @@ body{
     background: #fff;
     padding: 5px;
     #top{
+        position: relative;
         height: 68px;
         width: 340px;
         margin-bottom: 20px;
+        #alert1{
+            position: absolute;
+            display: none;
+            top:40px ;
+            left: 30px;
+            background: pink;
+            width: 200px;
+            height: 25px;
+            line-height: 25px;
+            font-size: 12px;
+            padding: 0 10px;
+        }
+        #alert2{
+            position: absolute;
+            display: none;
+            top:40px ;
+            left: 30px;
+            background: pink;
+            width: 200px;
+            height: 25px;
+            line-height: 25px;
+            font-size: 12px;
+            padding: 0 10px;
+        }
+        #alert3{
+            position: absolute;
+            display: none;
+            top:40px ;
+            left: 30px;
+            background: pink;
+            width: 200px;
+            height: 25px;
+            line-height: 25px;
+            font-size: 12px;
+            padding: 0 10px;
+        }
+        #alert4{
+            position: absolute;
+            display: none;
+            top:40px ;
+            left: 30px;
+            background:pink;
+            width: 250px;
+            height: 40px;
+            line-height: 18px;
+            font-size: 12px;
+            padding: 0 10px;
+        }
+        
         #left{
             width: 280px;
             height: 68px;
