--- a/sass/list.scss
+++ b/sass/list.scss
@@ -13,7 +13,6 @@
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
 }
-
 * {
     margin: 0;
     padding: 0;
@@ -30,6 +29,36 @@ a {
 img {
     display: block;
     border: none;
+}
+.nav01 {
+    width: 100%;
+    height: 45px;
+    background: #fc0f3d;
+    ul {
+        width: 1000px;
+        height: 45px;
+        margin: 0 auto;
+        font-size: 14px;
+        li {
+            margin-top: 5px;
+            float: left;
+            width: 32px;
+            height: 35px;
+            padding: 0 10px;
+            border-left: 1px dashed #fff;
+            a {
+                color: #fff;
+            }
+            &:first-child {
+                width: 100px;
+                height: 32px;
+                img {
+                    margin-left: 10px;
+                    margin-top: 5px;
+                }
+            }
+        }
+    }
 }
 
 #header {
@@ -160,309 +189,90 @@ img {
     }
 }
 
-#top {
-    width: 100%;
-    height: 41px;
-    //background: #0f0;
-    padding: 15px 0 30px 0;
-    .t-left {
-        float: left;
-        margin-left: 66px;
-        height: 40px;
-        .logo {
-            padding-top: 10px;
-            width: 164px;
-            height: 30px;
-            border-right: 1px solid #ccc;
-            float: left;
-            margin-top: 10px;
-            // background: #00f;
-        }
-        .shop {
-            width: 350px;
-            height: 20px;
-            padding: 10px;
-            float: left;
-            .shop-left {
-                width: 200px;
-                height: 40px;
-                border-right: 1px dashed #ccc;
-                float: left;
-                font-size: 12px;
-                cursor: pointer;
-                span {
-                    display: block;
-                    margin-top: 5px;
-                    width: 60px;
-                    height: 15px;
-                    background: #f4c985;
-                    border-radius: 8px;
-                    text-align: center;
-                    line-height: 15px;
-                    float: left;
-                }
-                em {
-                    float: left;
-                    color: deepskyblue;
-                    margin-top: 7px;
-                    margin-left: 5px;
-                }
-            }
-            .shop-right {
-                float: left;
-                font-size: 12px;
-                width: 138px;
-                height: 40px;
-                padding-left: 10px;
-                // padding: 10px;
-                border-right: 1px solid #ccc;
-            }
-        }
-        .phone {
-            width: 150px;
-            height: 40px;
-            float: left;
-            font-size: 12px;
-            // background: #00f;
-            margin-top: 10px;
-            span {
-                font-size: 30px;
-                cursor: pointer;
-            }
-        }
-    }
-    .t-right {
-        float: right;
-        margin-right: 34px;
-        .Tmall {
-            float: left;
-            width: 410px;
-            height: 35px;
-            background: #ff0036;
-            #txt {
-                background: #fff;
-                border: 0;
-                width: 300px;
-                height: 20px;
-                margin-top: 3px;
-                margin-left: 4px;
-                padding: 5px;
-                float: left;
-            }
-            #btn01 {
-                color: #fff;
-                width: 60px;
-                height: 30px;
-                float: left;
-                background: none;
-                margin-left: 20px;
-                border: none;
-            }
-        }
-        #btn02 {
-            float: left;
-            margin-left: 5px;
-            width: 60px;
-            height: 34px;
-            background: #333333;
-            border: 0;
-            color: #fff;
-        }
-    }
-}
-
-.nav01 {
-    width: 100%;
-    height: 45px;
-    background: #fc0f3d;
-    ul {
-        width: 1000px;
-        height: 45px;
-        margin: 0 auto;
-        font-size: 14px;
-        li {
-            margin-top: 5px;
-            float: left;
-            width: 32px;
-            height: 35px;
-            padding: 0 10px;
-            border-left: 1px dashed #fff;
-            a {
-                color: #fff;
-            }
-            &:first-child {
-                width: 100px;
-                height: 32px;
-                img {
-                    margin-left: 10px;
-                    margin-top: 5px;
-                }
-            }
-        }
-    }
-}
-
-.pan {
-    width: 100%;
-    height: 117px;
-    img {
+#nav {
         width: 100%;
-        height: 117px;
-    }
-}
-
-.nav02 {
-    width: 100%;
-    height: 33px;
-    background: #e2dcdc;
-    font-size: 14px;
-    ul {
-        float: left;
-        margin-left: 130px;
-        li {
-            margin: 0 20px;
-            float: left;
-            line-height: 33px;
-            a {
-                color: #323433;
-                span {
-                    color: #f00;
+        height: 90px;
+        border-bottom: 2px solid #ff0036;
+        padding-top: 30px;
+        #top {
+            width: 100%;
+            height: 80px;
+            img {
+                float: left;
+                margin-left: 45px;
+            }
+            #right {
+                float: left;
+                margin-left: 130px;
+                #search {
+                    width: 620px;
+                    height: 36px;
+                    background: #ff0036;
+                    padding: 2px;
+                    #txt {
+                        width: 482px;
+                        height: 26px;
+                        border: none;
+                        padding: 5px;
+                    }
+                    #btn {
+                        color: #fff;
+                        font-size: 20px;
+                        border: none;
+                        background: none;
+                        width: 120px;
+                    }
+                }
+                #search-d {
+                    margin-top: 7px;
+                    font-size: 12px;
+                    .active a {
+                        color: #ff0036;
+                    }
+                    li {
+                        float: left;
+                        width: 55px;
+                        height: 15px;
+                        border-right: 1px solid #999999;
+                        text-align: center;
+                        a {
+                            color: #999999;
+                        }
+                    }
                 }
             }
+            .rright{
+                float: right;
+                margin-right: 33px;
+                margin-top: -15px;
+            }
         }
+        
+}
+
+.t-list{width: 1260px; min-height: 400px; margin: 0 auto; 
+    dl{width: 227px; height: 350px; float: left; margin: 19px 12px;
+        dt{padding-top: 10px; margin-left: 7px;
+        img{
+            width: 210px;
+            height: 210px;
+        }}
+        dd{float: left;}
+        dd:nth-of-type(1){font-size: 18px; color: #f00;margin-left: 40px;}
+        dd:nth-of-type(2){font-size: 12px;height: 40px;a{
+            color: #333;
+        }}
+        dd:nth-of-type(3){width: 76px; height: 30px; margin-top: 30px;
+            span{display: block; float: left;}
+            span:nth-child(1){width: 16px; height: 28px; border: 1px solid #E0E0E0;}
+            span:nth-child(2){width: 28px; height: 28px; border: 1px solid #E0E0E0; text-align: center;}
+            span:nth-child(3){width: 16px; height: 28px; border: 1px solid #E0E0E0; text-align: center;}
+        }
+        dd:nth-of-type(4){width: 130px; height: 30px;  text-align: center; line-height: 30px; border: 1px solid #dadada; margin-top: 30px;}
     }
-    .n-search {
-        float: right;
-        margin-right: 117px;
-        width: 160px;
-        height: 20px;
-        margin-top: 5px;
-        font-size: 12px;
-        border-radius: 10px;
-        //border-radius: 10px;
-        border: 1px solid #ccc;
-        background: #fff;
-        #txt02 {
-            border: 0;
-            background: none;
-            margin: 2px;
-            width: 130px;
-        }
-        #btn03 {
-            border: 0;
-            background: none;
-            margin: 2px;
-        }
-    }
+    
 }
 
-.wrap{
-    width: 100%;
-    min-height: 490px;
-    //background: #0ff;
-    .w-center{
-        width: 510px;
-        height: 460px;
-        //background: #f00;
-        margin-top: 20px;
-        float: left;
-        background:url(../images/bg01.png) no-repeat 0 0;
-        padding: 60px 0px 0 0px;
-        h2{
-            font-size: 14px;
-            //margin-bottom: 30px;
-        }
-        p{
-            margin: 20px 0;
-        }
-        input{
-            border: 0;
-            width: 80px;
-            height: 40px;
-            background: #ff0036;
-            margin-left: 50px;
-        }
-        span{
-            color: #f00;
-            display: block;
-            width: 510px;
-            height: 30px;
-
-    }   
-}   
-#zoomBox {
-    position: relative;
-    width: 400px;
-    margin-left: 100px;
-    float: left;
-    background: #f0f;
-    // border: 1px solid #CECECE;
-}
-
-#midArea {
-    /*position: absolute;*/
-    width: 400px;
-    height: 400px;
-    // margin-left: 100px;
-    //border: 1px solid #CECECE;
-}
-
-#midArea img {
-    width: 400px;
-    height: 400px;
-}
-
-#zoom {
-    display: none;
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    background: yellow;
-    opacity: .3;
-    cursor: move;
-}
-
-#bigArea {
-    display: none;
-    position: absolute;
-    left: 400px;
-    top: -1px;
-    width: 400px;
-    height: 400px;
-    border: 1px solid #CECECE;
-    overflow: hidden;
-}
-
-#bigArea img {
-    position: absolute;
-    width: 800px;
-    height: 800px;
-}
-
-#smallArea ul {
-    display: flex;
-    height: 100px;
-    width: 400px;
-    border-top: 1px solid #CECECE;
-    align-items: center;
-    justify-content: space-around;
-}
-
-#smallArea li {
-    border: 2px solid white;
-    padding: 6px;
-}
-
-#smallArea li:hover,
-#smallArea li.hover {
-    border: 2px solid red;
-}
-
-#smallArea img {
-    width: 60px;
-    height: 60px;
-}
-}
 
 #footer {
     min-height: 558px;
@@ -614,3 +424,4 @@ div.w1190 #site-nav .sn-seller {
     font-size: 11px;
     background: #000
 }
+
